Fix the index test, a few views

--- a/app/views/chore/show.html.erb
+++ b/app/views/chore/show.html.erb
@@ -2,7 +2,5 @@
 <p>Find me in app/views/chore/show.html.erb</p>
 
 <ul>
-<% @chores.each do |chore| %>
-    <li><%= chore.title %></li>
-<% end %>
+<li><%= @chore.title %></li>
 </ul>
