--- a/app/views/chore/index.html.erb
+++ b/app/views/chore/index.html.erb
@@ -1,2 +1,8 @@
 <h1>Chore#index</h1>
 <p>Find me in app/views/chore/index.html.erb</p>
+
+<ul>
+<% @chores.each do |chore| %>
+    <li><%= chore.title %></li>
+<% end %>
+</ul>
