--- a/app/views/chore/index.html.erb
+++ b/app/views/chore/index.html.erb
@@ -1,10 +1,10 @@
 <h1>Chore#index</h1>
 <p>Find me in app/views/chore/index.html.erb</p>
 
-<ul>
-  <% @chores.each do |chore| %>
-    <%= render partial: "chore", locals: {chore: chore} %>
-  <% end %>
-</ul>
+<%= turbo_frame_tag "chore_page" do %>
+  <div class="column todo">
+  <%= render partial: "chore", collection: @chores %>
+  </div>
+<% end %>
 
 <%= link_to "New Chore", new_chore_path %>
