--- a/app/views/chore/_chore.html.erb
+++ b/app/views/chore/_chore.html.erb
@@ -1,9 +1,9 @@
-
-    <div class="chore card">
-        <h3><%= chore.title %></h3>
-        <p>Desc: <%= chore.desc %> Due date <%= chore.due_date %>
-
-            <div class="action-row">
-                <%= link_to "Complete Chore", { controller: :chore, action: :complete_chore, id: chore.id }, method: :post, data: {turbo_frame: "chore_page"} %>
-            </div>
+<div class="chore card">
+  <%= turbo_frame_tag dom_id(chore) do %>
+    <h3><%= link_to chore.title, chore_path(chore) %></h3>
+    <p>Desc: <%= chore.desc %> Due date <%= chore.due_date %>
+    <div class="action-row">
+      <%= link_to "Complete Chore", { controller: :chore, action: :complete_chore, id: chore.id }, method: :post, data: { turbo_frame: "chore_page" } %>
     </div>
+  <% end %>
+</div>
