--- a/app/views/chore/edit.html.erb
+++ b/app/views/chore/edit.html.erb
@@ -1,2 +1,3 @@
-<h1>Chore#edit</h1>
-<p>Find me in app/views/chore/edit.html.erb</p>
+<%= turbo_frame_tag @chore do %>
+  <p>Find me in app/views/chore/edit.html.erb</p>
+<% end %>
